--- a/product/templates/product/new_sales.html
+++ b/product/templates/product/new_sales.html
@@ -162,10 +162,14 @@
 					   
 						
 						<p>
-							<label for="docno" style="color:black;font-weight:bold;">Doc No:</label>
+							<label for="docno" style="color:black;font-weight:bold;">Bill No:</label>
 							<input type="text" id="docno" name="docno" required value="{{ doc_form.docno.value }}">
 							<label for="docdt" style="margin-left:5px;color:black;font-weight:bold;">Date:</label>
-							<input type="date" id="docdt" name="docdt" required value="{{ doc_form.docdt.value }}"><br>
+							<input type="date" id="docdt" name="docdt" required value="{{ doc_form.docdt.value }}">
+							<label for="po" style="margin-left:5px;color:black;font-weight:bold;">PO.No:</label>
+							<input type="text" id="po" name="po" required value="{{ doc_form.po.value }}" autocomplete="off">
+							<label for="veh" style="margin-left:5px;color:black;font-weight:bold;">Vehicle:</label>
+							<input type="text" id="veh" name="veh" required value="{{ doc_form.veh.value }}"><br>
 
 							<!-- Display form errors for doc_form -->
 							{% if doc_form.errors %}
@@ -295,7 +299,8 @@ $(document).ready(function() {
 	  });
 	 
 	});
-												
+
+													
 </script>
 										<td class="td-center">{{ form.totalprice }}</td>
 										
@@ -312,8 +317,9 @@ $(document).ready(function() {
 
             <div class="align-middle">			
                 <button type="submit" class="btn btn-success">Add to Sales</button>
-                <a href="{% url 'product:select-customer' %}" class="btn btn-danger">Go Back</a>
-                <a href="{% url 'product:customers-list' %}" class="btn btn-secondary">Cancel</a>
+               	
+				<a href="{% url 'product:select-customer' %}" class="btn btn-danger">Go Back</a>
+				<a href="{% url 'product:customers-list' %}" class="btn btn-secondary">Cancel</a>
             </div>
        	
 	
@@ -346,12 +352,12 @@ $(document).ready(function() {
 									<th style="text-align: center;color:black;width:2%;">Srl.</th>
 									<th style="text-align: center;color:black;width:5%;">Doc No.</th>
 									<th style="text-center: center;color:black;width:10%;">Date</th>
-									<th style="text-align: left;color:black;width:20%;">Belt No</th>
-									<th style="text-align: left;color:black;width:47%;">Description</th>						
+									<th style="text-align: left;color:black;width:17%;">Belt No</th>
+									<th style="text-align: left;color:black;width:30%;">Description</th>						
 									<th style="text-align: center;color:black;width:5%;">Mtrs.</th>
 									<th style="text-align: center;color:black;width:5%;">Rate<br>(Rs/m)</th>
 									<th style="text-align: center;color:black;width:6%;">Amount<br>(Rs.)</th>
-									<th  colspan="3" class="align-middle" style="color:black; width:10%">&nbspActions</th>
+									<th style="text-align: center;color:black; width:30%">Actions</th>
 									
 								</tr>
 							</thead>
@@ -367,9 +373,8 @@ $(document).ready(function() {
 									<td class="align-right">{{ item.quantity }}</td>
 									<td class="align-right">{{ item.perprice }}</td>
 									<td class="align-right">{{ item.totalprice }}</td>
-									<td><a style="text-align: right;color:blue;" href="{% url 'product:edit_sales_item' doc_no=item.doc_no %}">Edit</a></td>
-									<td><a style="text-align: right;color:blue;" href="{% url 'product:delete-sales-item' pk=item.id %}">Delete</a></td>
-									<td class="align-right"><a href="#" class="btn btn-secondary btn-sm">View Bill</a></td>
+									<td class="align-middle"><a style="color:blue;" href="{% url 'product:edit_sales_item' doc_no=item.doc_no %}">Edit</a>&nbsp&nbsp<a class="align-middle" style="color:blue;" href="{% url 'product:delete-sales-item' pk=item.id %}">Delete</a>&nbsp&nbsp<a href="{% url 'product:sale-bill' item.doc_no %}" class="btn btn-secondary btn-sm">View Bill</a></td>
+									
 								</tr>				
 							{% endfor %}
 							</tbody>
@@ -517,7 +522,7 @@ $(document).ready(function() {
 			  
 				$('#product').DataTable({
 						//scrollX: true,
-						
+						"colspan": 3, // Specify the colspan value
 						
 						dom: 'lBfrtip',
 						
