--- a/product/templates/product/new_sales.html
+++ b/product/templates/product/new_sales.html
@@ -577,4 +577,6 @@ $(document).ready(function() {
 
 <td><a style="text-align: right;color:blue;" href="{% url 'product:edit_sales_item' doc_no=item.doc_no %}">Edit</a></td>
 {% url 'sale-bill' item.doc_no %}
+
+{% url 'product:spl-create' %}
 -->					
